<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.4</version>
	</parent>

	<groupId>jkml</groupId>
	<artifactId>spring-boot-data-cassandra-example</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<java.version>17</java.version>
		<cassandra.version>4.0.17</cassandra.version>
		<cassandra-unit.version>4.3.1.0</cassandra-unit.version>
		<jamm.version>0.4.0</jamm.version>
		<jna.version>5.17.0</jna.version>
		<failureaccess.version>1.0.3</failureaccess.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-cassandra</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.cassandraunit</groupId>
			<artifactId>cassandra-unit-spring</artifactId>
			<version>${cassandra-unit.version}</version>
			<scope>test</scope>
			<exclusions>
				<!-- Not used by Cassandra 4 -->
				<exclusion>
					<groupId>org.apache.thrift</groupId>
					<artifactId>*</artifactId>
				</exclusion>
				<!-- Prefer JUnit 5 -->
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Contains classes used by cassandra-all but no longer in Guava 32.1.0 or above -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>failureaccess</artifactId>
			<version>${failureaccess.version}</version>
			<scope>runtime</scope>
		</dependency>

	</dependencies>

	<dependencyManagement>

		<dependencies>

			<dependency>
				<groupId>org.apache.cassandra</groupId>
				<artifactId>cassandra-all</artifactId>
				<version>${cassandra.version}</version>
				<exclusions>
					<!-- high-scale-lib source files already in src/test excluding classes in packages in jdk.base -->
					<exclusion>
						<groupId>com.boundary</groupId>
						<artifactId>*</artifactId>
					</exclusion>
					<!-- These contain classes in packages in jdk.base used by nodetool only -->
					<exclusion>
						<groupId>org.gridkit.jvmtool</groupId>
						<artifactId>*</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.gridkit.lab</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- cassandra-unit POM declares an old version for unknown reason -->
			<dependency>
				<groupId>net.java.dev.jna</groupId>
				<artifactId>jna</artifactId>
				<version>${jna.version}</version>
			</dependency>

			<!-- Version that works on Java 17 -->
			<dependency>
				<groupId>com.github.jbellis</groupId>
				<artifactId>jamm</artifactId>
				<version>${jamm.version}</version>
			</dependency>

		</dependencies>

	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						<!-- From https://github.com/apache/cassandra/blob/cassandra-4.0.17/conf/jvm11-clients.options -->
						--add-exports java.base/jdk.internal.misc=ALL-UNNAMED
						--add-exports java.base/jdk.internal.ref=ALL-UNNAMED
						--add-exports java.base/sun.nio.ch=ALL-UNNAMED
						--add-exports java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED
						--add-exports java.rmi/sun.rmi.registry=ALL-UNNAMED
						--add-exports java.rmi/sun.rmi.server=ALL-UNNAMED
						--add-exports java.sql/java.sql=ALL-UNNAMED

						--add-opens java.base/java.lang.module=ALL-UNNAMED
						--add-opens java.base/jdk.internal.loader=ALL-UNNAMED
						--add-opens java.base/jdk.internal.ref=ALL-UNNAMED
						--add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
						--add-opens java.base/jdk.internal.math=ALL-UNNAMED
						--add-opens java.base/jdk.internal.module=ALL-UNNAMED
						--add-opens java.base/jdk.internal.util.jar=ALL-UNNAMED
						--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED

						<!-- Required for Java 17 -->
						--add-opens java.base/java.io=ALL-UNNAMED
						--add-opens java.base/java.lang=ALL-UNNAMED
						--add-opens java.base/java.nio=ALL-UNNAMED
						--add-opens java.base/java.util=ALL-UNNAMED
						--add-opens java.base/java.util.concurrent=ALL-UNNAMED
						--add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
						--add-opens java.base/sun.nio.ch=ALL-UNNAMED

					</argLine>
				</configuration>
			</plugin>
		</plugins>

	</build>

</project>
